force-app/main/default/objects/Dependent_Forms_Tracker__c/Dependent_Forms_Tracker__c.object-meta.xml
<CustomObject>
    <label>Dependent Forms Tracker</label>
    <nameField>
        <displayFormat>DFT-{000000}</displayFormat>
        <label>Dependent Forms Tracker</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dependent Forms Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>