force-app/main/default/objects/Dependent_Forms_Tracker__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed?</label>
    <type>Checkbox</type>
</CustomField>