force-app/main/default/objects/Dependent_Forms_Tracker__c/fields/Dependent_Form_Id__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Form_Id__c</fullName>
    <label>Dependent Form Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>