force-app/main/default/objects/Dependent_Forms_Tracker__c/fields/Parent_Form_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Form_Id__c</fullName>
    <label>Parent Form Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>